--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div>
     <h1>Rock Paper Scissors</h1>
     
     <h2>Computer Choice: <span id="computer-choice"></span></h2>
@@ -17,7 +18,8 @@
     <button id="Rock">Rock</button>
     <button id="Paper">Paper</button>
     <button id="Scissors">Scissors</button>
-
+    </div>
+    
     <script src="app.js"></script>
 </body>
 </html>
